--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -40,3 +40,9 @@ build/
 paho*
 pah0*
 *-tcpbrokerhivemq*
+
+ai-prediction-service/src/main/resources/application.properties
+alert_service/src/main/resources/application.properties
+auth-service/src/main/resources/application.properties
+user-service/src/main/resources/application.properties
+health-data-service/src/main/resources/application.properties
